fixed z-index of hero-img__button of about section

--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -28,7 +28,7 @@
 			color: $color-1;
 			font-size: 3.6rem;
 			text-shadow: 2px 1px 2px rgb(0, 0, 0);
-			z-index: 100;
+			z-index: 50;
 			&:hover ~ .hero-img__text {
 				clip-path: circle(120% at 50% 90%);
 			}
