--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -6,6 +6,7 @@
 }
 
 .section-title {
+	position: relative;
 	margin-bottom: 1em;
 	display: flex;
 	justify-content: center;
@@ -14,6 +15,16 @@
 	text-transform: uppercase;
 	font-size: 3.1rem;
 	color: $color-3;
+
+	&::before {
+		position: absolute;
+		content: '';
+		bottom: -0.8rem;
+		background-color: $color-3;
+		height: 4px;
+		border-radius: 4px;
+		width: 12%;
+	}
 }
 
 .section-box {
